--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,12 @@
       <artifactId>lombok</artifactId>
       <version>1.16.16</version>
     </dependency>
-
+    <!-- Logging -->
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+        <version>1.7.22</version>
+    </dependency>
   </dependencies>
 
   <build>
