debug level logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.password=root
 spring.jpa.database = MYSQL
 spring.jpa.show-sql = true
 
+logging.level.org.springframework.web: DEBUG
+logging.level.org.hibernate: ERROR
+
 # Liquibase properties
 liquibase.change-log=classpath:/liquibase/changelog.xml
 
