--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
