--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,15 @@
-dist: bionic
-sudo: enabled
+#https://lkrnac.net/blog/2016/02/speed-gradle-build-travisci/
+install: echo "skip 'gradle assemble' step"
+
+script: gradle build --continue --stacktrace
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
 
 language: java
 jdk:
