--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'org.springframework.boot' version '2.1.7.RELEASE'
-    id "io.freefair.lombok" version "3.8.4"
+//    id "io.freefair.lombok" version "3.8.4"
 }
 
 repositories {
@@ -14,6 +14,8 @@ repositories {
 }
 
 dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.4.RELEASE'
     compile 'org.liquibase:liquibase-core:3.5.3'
     compile 'org.springframework.boot:spring-boot-starter-security:1.5.4.RELEASE'
