Make db host and port configurable via env parameters so that docker compose can set this easily yet still make it work on localmachine

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/churchpeople?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&characterEncoding=utf8
+spring.database.host=localhost
+spring.database.port=3306
+spring.datasource.url=jdbc:mysql://${spring.database.host}:${spring.database.port}/churchpeople?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
 
