--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,28 @@ services:
     volumes:
       - church-people-data:/var/lib/mysql
     ports:
-        - "3306:3306"
+        - "3307:3306"
     environment:
       MYSQL_USER: "root"
       MYSQL_ROOT_PASSWORD: "root"
       MYSQL_DATABASE: "churchpeople"
 
   church-people:
-    image: church-people
+    image: churchsource/church-people
     networks:
       - church-people-backend
     ports:
       - "8081:8080"
+    environment:
+      SPRING_DATABASE_HOST: "mysql"
+      SPRING_DATABASE_PORT: "3307"
+
+  church-people-frontend:
+    image: churchsource/cp-frontend
+    networks:
+      - church-people-backend
+    ports:
+      - "4000:81"
 
 networks:
   church-people-backend:
