--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       MYSQL_DATABASE: "churchpeople"
 
   church-people:
+    depends_on:
+      - mysql
     image: churchsource/church-people
     networks:
       - church-people-backend
@@ -23,7 +25,7 @@ services:
       - "8081:8080"
     environment:
       SPRING_DATABASE_HOST: "mysql"
-      SPRING_DATABASE_PORT: "3307"
+      SPRING_DATABASE_PORT: "3306"
 
   church-people-frontend:
     image: churchsource/cp-frontend
