--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testCompile 'org.mockito:mockito-core:3.0.0'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'com.github.npathai:hamcrest-optional:2.0.0'
+    testRuntime "com.h2database:h2:1.4.197"
 }
 
 group = 'org.churchsource'
