--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'idea'
     id 'java'
     id 'maven-publish'
-    id 'org.springframework.boot' version '2.1.7.RELEASE'
+    id "org.springframework.boot" version "2.2.4.RELEASE"
     id 'jacoco'
 //    id "io.freefair.lombok" version "3.8.4"
 }
@@ -10,22 +10,22 @@ plugins {
 repositories {
     mavenLocal()
     maven {
-        url = 'http://repo.maven.apache.org/maven2'
+        url = 'https://repo.maven.apache.org/maven2'
     }
 }
 
 dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.5.4.RELEASE'
-    compile 'org.liquibase:liquibase-core:3.5.3'
-    compile 'org.springframework.boot:spring-boot-starter-security:1.5.4.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-web:1.5.4.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.2.4.RELEASE'
+    compile 'org.liquibase:liquibase-core:3.6.3'
+    compile 'org.springframework.boot:spring-boot-starter-security:2.2.4.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-web:2.2.4.RELEASE'
     compile 'org.apache.commons:commons-lang3:3.9'
     compile 'org.projectlombok:lombok:1.16.16'
     runtime 'mysql:mysql-connector-java:5.1.42'
-    testCompile 'org.springframework.boot:spring-boot-starter-test:1.5.4.RELEASE'
-    testCompile 'org.springframework.security:spring-security-test:4.2.3.RELEASE'
+    testCompile 'org.springframework.boot:spring-boot-starter-test:2.2.4.RELEASE'
+    testCompile 'org.springframework.security:spring-security-test:5.2.2.RELEASE'
     testCompile 'junit:junit-dep:4.11'
     testCompile 'org.mockito:mockito-core:3.0.0'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
