--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.database.host=localhost
-spring.database.port=3306
+spring.database.port=3307
 spring.datasource.url=jdbc:mysql://${spring.database.host}:${spring.database.port}/churchpeople?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
@@ -12,7 +12,7 @@ logging.level.org.springframework.web: DEBUG
 logging.level.org.hibernate: ERROR
 
 # Liquibase properties
-liquibase.change-log=classpath:/liquibase/changelog.xml
+spring.liquibase.change-log=classpath:/liquibase/changelog.xml
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
@@ -28,3 +28,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
+spring.security.user.roles=USER
+spring.security.user.name=admin
+spring.security.user.password=password
