--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -14,5 +14,8 @@ spring.resources.add-mappings=false
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 # Liquibase properties
-liquibase.change-log=classpath:/liquibase/changelog.xml
+spring.liquibase.change-log=classpath:/liquibase/changelog.xml
