Replace Basic Auth with JWT auth.
Note this is still a work in prgoress (not tests are included
and so code coverage will also drop)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     depends_on:
       - mysql
     image: churchsource/church-people
+    #build:
+    #  context: .
+    #  dockerfile: ./Dockerfile
     networks:
       - church-people-backend
     ports:
