--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web:2.2.4.RELEASE'
     compile 'org.apache.commons:commons-lang3:3.9'
     compile 'org.projectlombok:lombok:1.16.16'
+    compile 'io.jsonwebtoken:jjwt:0.9.1'
     runtime 'mysql:mysql-connector-java:5.1.42'
     testCompile 'org.springframework.boot:spring-boot-starter-test:2.2.4.RELEASE'
     testCompile 'org.springframework.security:spring-security-test:5.2.2.RELEASE'
