--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,9 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 spring.security.user.roles=USER
 spring.security.user.name=admin
 spring.security.user.password=password
+
+jwt.signing.key.secret=mySecret
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=604800
