Add missing jwt properties to test file

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -19,3 +19,9 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 # Liquibase properties
 spring.liquibase.change-log=classpath:/liquibase/changelog.xml
+
+jwt.signing.key.secret=mySecret
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=604800
