--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,6 @@ spring.security.user.name=admin
 spring.security.user.password=password
 
 jwt.signing.key.secret=mySecret
-jwt.get.token.uri=/authenticate
-jwt.refresh.token.uri=/refresh
 jwt.http.request.header=Authorization
-jwt.token.expiration.in.seconds=604800
+jwt.token.expiration.in.seconds=900
+jwt.passwordchangetoken.expiration.in.seconds=900
