--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -24,4 +24,5 @@ jwt.signing.key.secret=mySecret
 jwt.get.token.uri=/authenticate
 jwt.refresh.token.uri=/refresh
 jwt.http.request.header=Authorization
-jwt.token.expiration.in.seconds=604800
+jwt.token.expiration.in.seconds=900
+jwt.passwordchangetoken.expiration.in.seconds=900
