Add base path to people url. i.e. /api/

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,5 @@ jwt.signing.key.secret=mySecret
 jwt.http.request.header=Authorization
 jwt.token.expiration.in.seconds=900
 jwt.passwordchangetoken.expiration.in.seconds=900
+
+server.servlet.context-path=/api
