--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,9 @@ services:
     depends_on:
       - mysql
     image: churchsource/church-people
-    #build:
-    #  context: .
-    #  dockerfile: ./Dockerfile
+#    build:
+#      context: .
+#      dockerfile: ./Dockerfile
     networks:
       - church-people-backend
     ports:
@@ -30,13 +30,37 @@ services:
       SPRING_DATABASE_HOST: "mysql"
       SPRING_DATABASE_PORT: "3306"
 
+  church-gateway:
+    depends_on:
+      - church-people
+    image: churchsource/church-gateway
+#    build:
+#      context: .
+#      dockerfile: ./Dockerfile
+    networks:
+      - church-people-backend
+    ports:
+      - "80:80"
+    environment:
+      GATEWAY_PORT: "80"
+      PEOPLE_HOST: "church-people"
+      PEOPLE_PORT: "8080"
+      SONG_HOST: "localhost"
+      SONG_PORT: "9000"
+      SITE_HOST: "church-people-frontend"
+      SITE_PORT: "4000"
+      SHEET_HOST: "mvsongs.co.za"
+      SHEET_PORT: "8000"
+
   church-people-frontend:
-    image: churchsource/cp-frontend
+    image: cp-frontend
     networks:
       - church-people-backend
     ports:
       - "4000:81"
-
+    environment:
+      GATEWAY_PORT: "80"
+      PEOPLE_HOST: "church-people"
 networks:
   church-people-backend:
   church-people:
