--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,8 @@ services:
       PEOPLE_PORT: "8080"
       SONG_HOST: "localhost"
       SONG_PORT: "9000"
-      SITE_HOST: "mvsongs.co.za"
-      SITE_PORT: "4000"
+      SITE_HOST:  "church-people-frontend:"
+      SITE_PORT:  "81"
       SHEET_HOST: "mvsongs.co.za"
       SHEET_PORT: "8000"
 
