--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,9 +30,25 @@ services:
       SPRING_DATABASE_HOST: "mysql"
       SPRING_DATABASE_PORT: "3306"
 
+  church-auth:
+    depends_on:
+      - mysql
+    image: churchsource/church-auth
+    #    build:
+    #      context: .
+    #      dockerfile: ./Dockerfile
+    networks:
+      - church-people-backend
+    ports:
+      - "8083:8080"
+    environment:
+      SPRING_DATABASE_HOST: "mysql"
+      SPRING_DATABASE_PORT: "3306"
+
   church-gateway:
     depends_on:
       - church-people
+      - church-auth
     image: churchsource/church-gateway
 #    build:
 #      context: .
@@ -44,6 +60,8 @@ services:
     environment:
       GATEWAY_PORT: "80"
       PEOPLE_HOST: "church-people"
+      PEOPLE_PORT: "8080"
+      PEOPLE_HOST: "church-auth"
       PEOPLE_PORT: "8080"
       SONG_HOST: "localhost"
       SONG_PORT: "9000"
