--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,8 +61,8 @@ services:
       GATEWAY_PORT: "80"
       PEOPLE_HOST: "church-people"
       PEOPLE_PORT: "8080"
-      PEOPLE_HOST: "church-auth"
-      PEOPLE_PORT: "8080"
+      AUTH_HOST: "church-auth"
+      AUTH_PORT: "8080"
       SONG_HOST: "church-songs"
       SONG_PORT: "9000"
       SITE_HOST:  "church-people-frontend"
