Add services to docker-compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,5 @@ jwt.token.expiration.in.seconds=900
 jwt.passwordchangetoken.expiration.in.seconds=900
 
 server.servlet.context-path=/api
+
+server.port=8085
