--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,21 @@ services:
       SPRING_DATABASE_HOST: "mysql"
       SPRING_DATABASE_PORT: "3306"
 
+  church-services:
+    depends_on:
+      - mysql
+    image: churchsource/church-services
+    #    build:
+    #      context: .
+    #      dockerfile: ./Dockerfile
+    networks:
+      - church-people-backend
+    ports:
+      - "8086:8080"
+    environment:
+      SPRING_DATABASE_HOST: "mysql"
+      SPRING_DATABASE_PORT: "3306"
+
   church-gateway:
     depends_on:
       - church-people
@@ -61,6 +76,8 @@ services:
       GATEWAY_PORT: "80"
       PEOPLE_HOST: "church-people"
       PEOPLE_PORT: "8080"
+      SERVICES_HOST: "church-services"
+      SERVICES_PORT: "8080"
       AUTH_HOST: "church-auth"
       AUTH_PORT: "8080"
       SONG_HOST: "church-songs"
