--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,11 +116,11 @@ services:
     networks:
       - church-people-backend
     ports:
-      - "80:5000"
+      - "8084:5000"
     environment:
      CHURCH_AUTH_URL: "http://church-auth/api"
      CHURCH_SONGS_URL: "http://church-songs/api"
-     CHURCH_SERVICES_URL: "http://church-service/api"
+     CHURCH_SERVICES_URL: "http://church-services/api"
 
      CHURCH_API_USERNAME: "worship"          # this user only has readme access
      CHURCH_API_PASSWORD: "password"         # TODO update with secret
