--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,8 @@ services:
       SPRING_DATABASE_HOST: "mysql"
       SPRING_DATABASE_PORT: "3306"
       SERVER_PORT: "8080"
-      JAVA_OPTS:  -XX:+UseSerialGC -Xss512k -XX:MaxRAM=72m -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Djava.security.egd=file:/dev/./urandom
+      JAVA_OPTS: "-XX:+UseSerialGC -Xss512k -XX:MaxRAM=72m -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Djava.security.egd=file:/dev/./urandom"
+
   church-auth:
     depends_on:
       - mysql
@@ -44,6 +45,7 @@ services:
       SPRING_DATABASE_HOST: "mysql"
       SPRING_DATABASE_PORT: "3306"
       SERVER_PORT: "8080"
+      JAVA_OPTS: "-XX:+UseSerialGC -Xss512k -XX:MaxRAM=72m -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Djava.security.egd=file:/dev/./urandom"
 
   church-services:
     depends_on:
@@ -60,6 +62,7 @@ services:
       SPRING_DATABASE_HOST: "mysql"
       SPRING_DATABASE_PORT: "3306"
       SERVER_PORT: "8080"
+      JAVA_OPTS: "-XX:+UseSerialGC -Xss512k -XX:MaxRAM=72m -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Djava.security.egd=file:/dev/./urandom"
 
   church-gateway:
     depends_on:
@@ -88,6 +91,7 @@ services:
       SHEET_PORT: "8000"
       CHURCH_TG_HOST: "church-telegram-bot-bff"
       CHURCH_TG_PORT: 5000
+      JAVA_OPTS: "-XX:+UseSerialGC -Xss512k -XX:MaxRAM=72m -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Djava.security.egd=file:/dev/./urandom"
 
   church-songs:
     depends_on:
