--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,5 @@ jwt.passwordchangetoken.expiration.in.seconds=900
 server.servlet.context-path=/api
 
 server.port=8085
+
+server.tomcat.max-threads=5
