--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,8 +101,10 @@ services:
     image: churchsource/church-songs
     networks:
       - church-people-backend
-  #  ports:
-  #    - "9002:9000"
+    volumes:
+      - /var/www/html/gdrive/sheets:/var/www/html/gdrive/sheets
+#    ports:
+#      - "9002:9000"
     environment:
       SONG_DB_URL: "jdbc:mysql://mysql:3306/churchsongs?createDatabaseIfNotExist=true&useSSL=false&useUnicode=true&characterEncoding=utf8"
 
@@ -163,3 +165,5 @@ volumes:
 
   elastic-search-data:
     driver: local
+
+  sheet-data:
