--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -143,6 +143,7 @@ services:
     environment:
      CHURCH_AUTH_URL: "http://church-auth:8080/api"
      CHURCH_SONGS_URL: "http://church-songs:9000/api"
+     CHURCH_MUSIC_TEAM_URL: "http://church-music-team:8080/api"
      CHURCH_SERVICES_URL: "http://church-services:8080/api"
      LYRICS_SEARCH_URL: "http://elasticsearch:9200"
 
