--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -146,10 +146,23 @@ services:
      CHURCH_MUSIC_TEAM_URL: "http://church-music-team:8080/api"
      CHURCH_SERVICES_URL: "http://church-services:8080/api"
      LYRICS_SEARCH_URL: "http://elasticsearch:9200"
-
-
      CHURCH_API_USERNAME: "worship"          # this user only has readme access
      CHURCH_API_PASSWORD: "password"         # TODO update with secret
+
+  sheet-merger:
+    depends_on:
+      - church-songs
+    image: churchsource/sheet-merger
+    restart: always
+    networks:
+      - church-people-backend
+    #    ports:
+    #      - "8084:5000"
+    environment:
+      CHURCH_AUTH_URL: "http://church-auth:8080/api"
+      CHURCH_SONGS_URL: "http://church-songs:9000/api"
+      CHURCH_API_USERNAME: "worship"          # this user only has readme access
+      CHURCH_API_PASSWORD: "password"         # TODO update with secret
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.7.0
