--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,6 +101,8 @@ services:
       AUTH_PORT: "8080"
       SONG_HOST: "church-songs"
       SONG_PORT: "9000"
+      CHURCH_SONGBOOK_HOST: "church-songs"
+      CHURCH_SONGBOOK_PORT: "5000"
       SITE_HOST:  "church-people-frontend"
       SITE_PORT:  "81"
       SHEET_HOST: "mvsongs.co.za"
