--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -165,6 +165,7 @@ services:
       CHURCH_SONGS_URL: "http://church-songs:9000/api"
       CHURCH_API_USERNAME: "worship"          # this user only has readme access
       CHURCH_API_PASSWORD: "password"         # TODO update with secret
+      SONGBOOK_TMP_DIR: "/var/sheets/"
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.7.0
