--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -160,12 +160,14 @@ services:
       - church-people-backend
     #    ports:
     #      - "8084:5000"
+    volumes:
+      - church-people-data:/var/sheets_tmp/
     environment:
       CHURCH_AUTH_URL: "http://church-auth:8080/api"
       CHURCH_SONGS_URL: "http://church-songs:9000/api"
       CHURCH_API_USERNAME: "worship"          # this user only has readme access
       CHURCH_API_PASSWORD: "password"         # TODO update with secret
-      SONGBOOK_TMP_DIR: "/var/sheets/"
+      SONGBOOK_TMP_DIR: "/var/sheets_tmp/"
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.7.0
@@ -194,3 +196,5 @@ volumes:
 
   elastic-search-data:
     driver: local
+
+  sheet-merger-data:
